Enhanced OpenAPI documentation with API tags